@@ -14,6 +14,9 @@ Release 0.18.1 - Unreleased
    HBASE-576   Investigate IPC performance; partial.
    HBASE-924   Update hadoop in lib on 0.18 hbase branch to 0.18.1
 
+  IMPROVEMENTS
+   HBASE-920   Make region balancing sloppier
+
 Release 0.18.0 - September 21st, 2008
 
   INCOMPATIBLE CHANGES
